--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   sqflite_common_ffi: ^2.0.0+1
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.6
+  geolocator: ^7.4.0
+  convex_bottom_bar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
