--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
    <application
-        android:label="buddhist_sun"
+        android:label="Buddhist Sun"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
