--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -29,7 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  flutter_localizations: # Add this line
+    sdk: flutter         # Add this line
+# #enddocregion FlutterLocalizations
+  intl: ^0.17.0 # Add this line
+# #enddocregion Intl
   flutter_spinkit: "^5.0.0"
   solar_calculator: ^1.0.2
   path_provider: ^2.0.2
@@ -66,6 +70,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true # Add this line
+  # #enddocregion Generate
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
