--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,7 @@ dependencies:
   motion_toast: ^1.3.0
   geocoding: ^2.0.1
   flex_color_scheme: ^3.0.1
-  easy_localization: ^3.0.0
-  one_context: ^1.1.1
+  internet_connection_checker: ^0.0.1+2
   
   
 
