--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.4.0+6
+version: 1.4.2+7
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -54,6 +54,7 @@ dependencies:
   geocoding: ^2.0.1
   flex_color_scheme: ^3.0.1
   internet_connection_checker: ^0.0.1+2
+  provider: ^6.0.0
   
   
 
