--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ flutter:
   assets:
     - assets/citydb.db
     - assets/buddhist_sun.png
+    - assets/sun.png
+    - assets/moon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
