--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,8 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [mapsApiKey: "$System.env.MAPS_API_KEY"]
+
     }
 
    signingConfigs {
