--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
    <application
         android:label="Buddhist Sun"
         android:icon="@mipmap/ic_launcher">
+<meta-data android:name="com.google.android.geo.API_KEY"
+                android:value="${mapsApiKey}"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
