--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   timezone: ^0.9.2
   flutter_mmcalendar: any
   flutter_launcher_icons: ^0.13.1
+  url_launcher: ^6.2.1
+  in_app_review: ^2.0.8
   
   
 
