--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.0+16
+version: 1.5.2+17
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -60,6 +60,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   url_launcher: ^6.2.1
   in_app_review: ^2.0.8
+  package_info_plus: ^3.1.2
   
   
 
