--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.bksubhuti.buddhistsun"
+    namespace "com.bksubhuti.buddhistsun.buddhist_sun"
     compileSdk = 34
     ndkVersion "26.1.10909125"
 
@@ -45,15 +45,16 @@ android {
     }
     
 defaultConfig {
-    applicationId "com.bksubhuti.buddhistsun"
+    applicationId "com.bksubhuti.buddhistsun.buddhist_sun"
     minSdkVersion flutter.minSdkVersion
     targetSdkVersion flutter.targetSdkVersion
     versionCode flutterVersionCode.toInteger()
     versionName flutterVersionName
-    manifestPlaceholders = [
-        mapsApiKey: "$System.env.MAPS_API_KEY",
-        applicationName: "io.flutter.app.FlutterApplication"  // or your custom application class
-    ]
+//    manifestPlaceholders = [
+//        mapsApiKey: "$System.env.MAPS_API_KEY",
+    //    applicationName: "io.flutter.app.FlutterApplication"  // or your custom application class
+
+  //  ]
 }
      signingConfigs {
          release {
