--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:label="Buddhist Sun"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"/>
+                
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
