--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Flutter projecto for monk sun tools
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is psreferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,10 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations: # Add this line
-    sdk: flutter         # Add this line
-# #enddocregion FlutterLocalizations
+    sdk: flutter # Add this line
+  # #enddocregion FlutterLocalizations
   intl: ^0.19.0 # Add this line
-# #enddocregion Intl
+  # #enddocregion Intl
   flutter_spinkit: "^5.0.0"
   solar_calculator: ^1.0.2
   path_provider: ^2.0.2
@@ -64,8 +64,8 @@ dependencies:
   package_info_plus: ^8.0.0
   wakelock_plus: ^1.2.5
   flex_color_scheme: ^7.3.1
-  
-  
+  enum_to_string: ^2.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -100,10 +100,10 @@ flutter:
     - assets/moon_free.png
     - assets/moon_free2.png
     - assets/buddhist_sun_app_logo.png
-  
+    - assets/uposatha.json
 
 flutter_launcher_icons:
-  android: true 
+  android: true
   ios: true
   image_path_android: "assets/icon/icon.png"
   image_path_ios: "assets/icon/icon.png"
