--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.4+20
+version: 1.5.5+22
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -47,10 +47,7 @@ dependencies:
   geolocator: ^12.0.0
   bottom_navy_bar: ^6.1.0
   flutter_tts: ^4.0.2
-  flutter_background:
-    git:
-      url: https://github.com/sumbodhi/flutter_background.git
-      ref: master
+  flutter_background: ^1.3.0+1
   motion_toast: ^2.7.9
   geocoding: ^3.0.0
   internet_connection_checker: ^1.0.0+1
@@ -60,7 +57,7 @@ dependencies:
   flutter_mmcalendar: any
   flutter_launcher_icons: ^0.13.1
   url_launcher: ^6.2.1
-  in_app_review: ^2.0.9
+  in_app_review: ^2.0.10
   package_info_plus: ^8.0.0
   wakelock_plus: ^1.2.5
   flex_color_scheme: ^7.3.1
