--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext.kotlin_version = '1.9.0'
-//    ext.agp_version = '8.5.0'
+    ext.app_version = '8.6.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-//        classpath "com.android.tools.build:gradle:${agp_version}"
+        classpath "com.android.tools.build:gradle:8.6.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
