--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,23 +44,23 @@ dependencies:
   sqflite_common_ffi: ^2.0.0+1
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.6
-  geolocator: ^12.0.0
+  geolocator: ^14.0.0
   bottom_navy_bar: ^6.1.0
   flutter_tts: ^4.0.2
   flutter_background: ^1.3.0+1
   motion_toast: ^2.7.9
   geocoding: ^3.0.0
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker: ^3.0.1
   provider: ^6.0.0
-  google_maps_flutter: ^2.0.9
-  timezone: ^0.9.2
-  flutter_mmcalendar: any
-  flutter_launcher_icons: ^0.13.1
+  google_maps_flutter: ^2.6.1
+  timezone: ^0.10.1
+  flutter_mmcalendar: ^1.1.2
+  flutter_launcher_icons: ^0.14.3
   url_launcher: ^6.2.1
   in_app_review: ^2.0.10
   package_info_plus: ^8.0.0
   wakelock_plus: ^1.2.5
-  flex_color_scheme: ^7.3.1
+  flex_color_scheme: ^8.2.0
   enum_to_string: ^2.0.1
   http: ^1.2.2
 
@@ -73,7 +73,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
