--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.5+22
+version: 1.5.6+25
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -36,7 +36,7 @@ dependencies:
   # #enddocregion Intl
   flutter_spinkit: "^5.0.0"
   solar_calculator: ^1.0.2
-  path_provider: ^2.0.2
+  path_provider: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +67,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  flutter_plugin_android_lifecycle: ^2.0.28
+  path_provider_android: ^2.2.17
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
