--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations: # Add this line
+  flutter_localizations:
     sdk: flutter # Add this line
   # #enddocregion FlutterLocalizations
-  intl: ^0.19.0 # Add this line
   # #enddocregion Intl
   flutter_spinkit: "^5.0.0"
   solar_calculator: ^1.0.2
@@ -56,13 +55,14 @@ dependencies:
   timezone: ^0.10.1
   flutter_mmcalendar: ^1.1.2
   flutter_launcher_icons: ^0.14.3
-  url_launcher: ^6.2.1
+  url_launcher: ^6.2.5
   in_app_review: ^2.0.10
   package_info_plus: ^8.0.0
   wakelock_plus: ^1.3.2
   flex_color_scheme: ^8.2.0
   enum_to_string: ^2.0.1
   http: ^1.2.2
+  intl: any
 
 dev_dependencies:
   flutter_test:
