--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_localizations: # Add this line
     sdk: flutter # Add this line
   # #enddocregion FlutterLocalizations
-  intl: ^0.19.0 # Add this line
+  intl: ^0.20.2 
   # #enddocregion Intl
   flutter_spinkit: "^5.0.0"
   solar_calculator: ^1.0.2
@@ -49,7 +49,7 @@ dependencies:
   flutter_tts: ^4.0.2
   flutter_background: ^1.3.0+1
   motion_toast: ^2.12.1
-  geocoding: ^3.0.0
+  geocoding: ^4.0.0
   internet_connection_checker: ^3.0.1
   provider: ^6.0.0
   google_maps_flutter: ^2.6.1
