added languages and fonts and upgrades of android gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,13 @@
+// android/build.gradle (project-level)
+
+// Keep only what you actually use; no need for plugin classpaths here anymore.
 buildscript {
-    ext.kotlin_version = '1.9.0'
     ext.app_version = '8.10.0'
     repositories {
         google()
         mavenCentral()
     }
-
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.10.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
 }
-
 
 allprojects {
     repositories {
@@ -32,10 +28,9 @@ allprojects {
 }
 
 rootProject.buildDir = '../build'
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(':app')
 }
 
