--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.6+26
+version: 1.5.8+28
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -54,7 +54,7 @@ dependencies:
   provider: ^6.0.0
   google_maps_flutter: ^2.6.1
   timezone: ^0.10.1
-  flutter_mmcalendar: ^1.1.2
+  flutter_mmcalendar: ^2.0.0
   flutter_launcher_icons: ^0.14.3
   url_launcher: ^6.2.1
   in_app_review: ^2.0.10
@@ -124,17 +124,11 @@ flutter_launcher_icons:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+  - family: NotoSansMyanmar
+    fonts:
+      - asset: assets/fonts/NotoSansMyanmar-Regular.ttf
+      - asset: assets/fonts/NotoSansSinhala-VariableFont_wdth,wght.ttf
+#
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
