--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,6 @@ dependencies:
   internet_connection_checker: ^3.0.1
   provider: ^6.0.0
   google_maps_flutter: ^2.6.1
-  timezone: ^0.10.1
   flutter_mmcalendar: ^2.0.0
   flutter_launcher_icons: ^0.14.3
   url_launcher: ^6.2.1
@@ -63,7 +62,10 @@ dependencies:
   flex_color_scheme: ^8.2.0
   enum_to_string: ^2.0.1
   http: ^1.2.2
-
+  flutter_local_notifications: ^19.4.2
+  timezone: ^0.10.1
+  flutter_timezone: ^4.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
