--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!--        PERMISSIONS     -->
     <!-- ====================== -->
 
-    <!-- Location (app feature) -->
+    <!-- Location -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -12,8 +12,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <!-- Network -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -40,14 +40,14 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <!-- Flutter Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|
-                                   layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|
+                                   smallestScreenSize|locale|layoutDirection|fontScale|
+                                   screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:enableOnBackInvokedCallback="true"
             android:windowSoftInputMode="adjustResize">
@@ -57,21 +57,16 @@
                 android:resource="@style/NormalTheme" />
 
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <!-- Required by Flutter -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <!-- =========================== -->
-        <!--      NOTIFICATION SYSTEM    -->
-        <!-- =========================== -->
-
-        <!-- 1. Restores scheduled notifications after reboot -->
+        <!-- Notifications restore on reboot -->
         <receiver
             android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
             android:exported="true">
@@ -80,12 +75,12 @@
             </intent-filter>
         </receiver>
 
-        <!-- 2. Fires scheduled notifications -->
+        <!-- Notification triggers -->
         <receiver
             android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"
             android:exported="false" />
 
-        <!-- 3. Foreground service used for notification scheduling -->
+        <!-- ForegroundService for scheduled notifications -->
         <service
             android:name="com.dexterous.flutterlocalnotifications.ForegroundService"
             android:exported="false"
@@ -93,13 +88,10 @@
             android:foregroundServiceType="specialUse">
             <property
                 android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="Notification scheduling support" />
+                android:value="Notification scheduling support"/>
         </service>
 
-        <!-- =========================== -->
-        <!--        FLUTTER BACKGROUND   -->
-        <!-- =========================== -->
-
+        <!-- Flutter background isolate (REQUIRED for TTS + timer) -->
         <service
             android:name="de.julianassmann.flutter_background.IsolateHolderService"
             android:exported="false"
@@ -107,7 +99,6 @@
 
     </application>
 
-    <!-- Required for ProcessText (Flutter) -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT" />
